BUGFIX: resolved home page image overflow problem

--- a/client/style/scss/style.scss
+++ b/client/style/scss/style.scss
@@ -164,6 +164,7 @@ html, body {
 .thumbnail-image > img {
   height: 40vh;
   display: block;
+  height: 100%;
 }
 
 .lesson-thumbnail {
